--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,25 @@
       <%= flash["notice"] %>
     </div>
     <div>
+      <a href="/places" class="btn btn-default">Home</a>
+      
+      <% if @current_user != nil %>
+        Hey, <%= @current_user["first_name"] %>
+        |
+        <a href="/logout" class="btn btn-default">Logout</a>
+
+        <!-- TODO: if logged in user, hide Login and Sign Up -->
+      <% else %>
+        <a href="/login" class="btn btn-default">Login</a> |
+        <a href="/users/new" class="btn btn-default">Sign Up</a>
+      <% end %>
+
+      <!--
       <a href="/">Home</a>
       <a href="/logout">Logout</a>
       <a href="/login">Login</a>
       <a href="/users/new">Signup</a>
+      -->
     </div>
 
     <%= yield %>
