--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 <html>
   <head>
@@ -8,24 +9,68 @@
 
     <link rel="stylesheet" href="/stylesheets/application.css">
   </head>
+-->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tacostagram Final</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+</head>
+
 
   <body>
     <div>
       <%= flash["notice"] %>
     </div>
-    <div>
-      <a href="/places" class="btn btn-default">Home</a>
+     <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
       
-      <% if @current_user != nil %>
-        Hey, <%= @current_user["first_name"] %>
-        |
-        <a href="/logout" class="btn btn-default">Logout</a>
+      <a class="navbar-brand" href="/">Tacostagram!</a>
+      
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <!-- TODO: if logged in user, hide Login and Sign Up -->
-      <% else %>
-        <a href="/login" class="btn btn-default">Login</a> |
-        <a href="/users/new" class="btn btn-default">Sign Up</a>
-      <% end %>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/posts">Tacostagram</a>
+          </li>
+        </ul>
+        
+        <ul class="navbar-nav mb-2 mb-lg-0">
+          <% if @current_user %>
+            <li class="nav-item">Logged in as: <%= @current_user["first_name"] %></li>
+            <li class="nav-item"><a href="/logout" class="nav-link">Logout</a></li>
+          <% else %>
+            <li class="nav-item"><a href="/login" class="nav-link">Login</a></li>
+            <li class="nav-item"><a href="/users/new" class="nav-link">Sign Up</a></li>
+          <% end %>
+        </div>
+  
+      </div>
+    </div>
+  </nav>
+    # <div>
+    #   <% %>
+    #   <% if @current_user != nil %>
+    #     Hey, <%= @current_user["username"] %>
+    #     |
+    #      <a href="/places" class="btn btn-default">Home</a>
+    #     |
+    #     <a href="/logout" class="btn btn-default">Logout</a>
+
+    #     <!-- TODO: if logged in user, hide Login and Sign Up -->
+    #   <% else %>
+    #     <a href="/login" class="btn btn-default">Login</a> |
+    #     <a href="/users/new" class="btn btn-default">Sign Up</a>
+    #   <% end %>
 
       <!--
       <a href="/">Home</a>
