--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,10 +1,15 @@
 <h1><%= @place["name"] %></h1>
-
 <h2>My Posts</h2>
+
+<div class="row">
+
 <% for post in @posts %>
+<div class="col-3">
   <h3><%= post["title"] %></h3>
   <h4><%= post["posted_on"] %></h4>
+  <img class="img-fluid" src="<%= post["image"] %>" class="w-full">
   <p><%= post["description"] %></p>
+  </div>
 <% end %>
 
 <p>
@@ -14,3 +19,5 @@
 <p>
   <a href="/places">Back to All Places</a>
 </p>
+
+</div>
