--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,17 +36,23 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+  
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/">Home</a>
+            <% if @current_user != nil %>
+              <a class="nav-link" aria-current="page" > Hey, <%= @current_user["username"] %> </a>
+            <%else%>
+              <a href=""></a>
+            <%end %>
           </li>
+
           <li class="nav-item">
-            <a class="nav-link" href="/posts">Tacostagram</a>
+            <a class="nav-link" aria-current="page" href="/places">Home</a>
           </li>
+
         </ul>
         
         <ul class="navbar-nav mb-2 mb-lg-0">
           <% if @current_user %>
-            <li class="nav-item">Logged in as: <%= @current_user["first_name"] %></li>
             <li class="nav-item"><a href="/logout" class="nav-link">Logout</a></li>
           <% else %>
             <li class="nav-item"><a href="/login" class="nav-link">Login</a></li>
@@ -57,6 +63,8 @@
       </div>
     </div>
   </nav>
+
+  <!--
     # <div>
     #   <% %>
     #   <% if @current_user != nil %>
@@ -65,13 +73,14 @@
     #      <a href="/places" class="btn btn-default">Home</a>
     #     |
     #     <a href="/logout" class="btn btn-default">Logout</a>
-
-    #     <!-- TODO: if logged in user, hide Login and Sign Up -->
+-->
+        <!-- TODO: if logged in user, hide Login and Sign Up -->
+<!--    
     #   <% else %>
     #     <a href="/login" class="btn btn-default">Login</a> |
     #     <a href="/users/new" class="btn btn-default">Sign Up</a>
     #   <% end %>
-
+-->
       <!--
       <a href="/">Home</a>
       <a href="/logout">Logout</a>
