--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Places</h1>
 <p>
-  <a href="/places/new">New place</a>
+  <a href="/places/new" class="btn btn-success" >New place</a>
 </p>
 
 <ul>
