--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -5,7 +5,9 @@
     <%= form.label "name" %>
     <%= form.text_field "name" %>
   </p>
-  <p>
-    <%= form.submit %>
-  </p>
+
+  <button class="btn btn-secondary-" type="submit">
+      <%= form.submit %>
+  </button>
+
 <% end %>
