--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -29,7 +29,7 @@
 
     <%= form.hidden_field "user_id" %>
   
-  <p>
+ <button class="btn btn-secondary-" type="submit">
     <%= form.submit %>
-  </p>
+  </button>
 <% end %>
