--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,34 +9,24 @@
 </head>
 
 
-  <body>
-    <div>
-      <%= flash["notice"] %>
-    </div>
-     <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<body>
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      
       <a class="navbar-brand" >Tacostagram!</a>
-      
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-  
           <li class="nav-item">
             <% if @current_user != nil %>
               <a class="nav-link" aria-current="page" > Hey, <%= @current_user["username"] %> </a>
-            <%else%>
-              <a href=""></a>
             <%end %>
           </li>
-
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="/places">Home</a>
           </li>
-
         </ul>
         
         <ul class="navbar-nav mb-2 mb-lg-0">
@@ -47,13 +37,21 @@
             <li class="nav-item"><a class="nav-link">|</a></li>
             <li class="nav-item"><a href="/users/new" class="nav-link">Sign Up</a></li>
           <% end %>
-        </div>
-  
+        </u>
       </div>
     </div>
   </nav>
-</div>
+
+  <div class="container pt-3">
+    <div class="row">
+      <div class="col text-center">
+        <%= flash["notice"] %>
+      </div>
+    </div> 
 
     <%= yield %>
-  </body>
+  </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+</body>
 </html>
